# csad2526ki405basystiukmariana1

./: CMakeLists.txt  README.md  ci.sh  lab2.qsf  lab2.qws  lab2_nativelink_simulation.rpt  main.cpp  math_operations.cpp  math_operations.h  tb_uart.vhd  tb_uart.vhd.bak  uart_rx.vhd.bak  uart_top.vhd  uart_top.vhd.bak  uart_tx.vhd.bak
.github/workflows/: ci.yml
db/: lab2.(0).cnf.cdb  lab2.(0).cnf.hdb  lab2.(1).cnf.cdb  lab2.(1).cnf.hdb  lab2.(2).cnf.cdb  lab2.(2).cnf.hdb  lab2.(3).cnf.cdb  lab2.(3).cnf.hdb  lab2.ae.hdb  lab2.asm.qmsg  lab2.asm.rdb  lab2.asm_labs.ddb  lab2.cmp.bpm  lab2.cmp.cdb  lab2.cmp.hdb  lab2.cmp.idb  lab2.cmp.logdb  lab2.cmp.rdb  lab2.db_info  lab2.eda.qmsg  lab2.fit.qmsg  lab2.hier_info  lab2.hif  lab2.lpc.html  lab2.lpc.rdb  lab2.lpc.txt  lab2.map.bpm  lab2.map.cdb  lab2.map.hdb  lab2.map.kpt  lab2.map.qmsg  lab2.map.rdb  lab2.map_bb.cdb  lab2.map_bb.hdb  lab2.pplq.rdb  lab2.pre_map.cdb  lab2.pre_map.hdb  lab2.routing.rdb  lab2.rtlv.hdb  lab2.rtlv_sg.cdb  (+12 more)
incremental_db/compiled_partitions/: lab2.db_info  lab2.root_partition.cmp.ammdb  lab2.root_partition.cmp.cdb  lab2.root_partition.cmp.hdb  lab2.root_partition.cmp.rcfdb  lab2.rrp.hdb  (+6 more)
lab_2/: lab2.qpf  tb_uart.vhd  uart_baud_gen.vhd  uart_pins.qsf  uart_rx.vhd  uart_top.vhd  uart_tx.vhd
logs/: log_task1.txt  log_task2.txt  log_task3.txt  log_task4.txt  log_task5.txt
output_files/: lab2.asm.rpt  lab2.done  lab2.eda.rpt  lab2.fit.rpt  lab2.fit.summary  lab2.flow.rpt  lab2.jdi  lab2.map.rpt  lab2.map.summary  lab2.pin  lab2.sof  lab2.sta.rpt  lab2.sta.summary
tests/: unit_tests.cpp
(+2 files in other folders)
